fix price box prices on mobile, add white color option

--- a/sections/box/_box-price.scss
+++ b/sections/box/_box-price.scss
@@ -6,6 +6,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: rem(36px);
+    align-items: center;
 
     @include media-breakpoint-down(lg) {
         grid-template-columns: 1fr;
@@ -13,6 +14,11 @@
     }
 
     :nth-child(2) {
+        .tjs-wrapper {
+            padding: 4.5rem 2.5rem;
+        }
+
+
         &.tjs-box-price__disturber {
             position: absolute;
             right: rem(10px);
@@ -30,6 +36,31 @@
                 right: 4px;
                 top: 24px;
                 text-transform: uppercase;
+            }
+        }
+    }
+
+    :nth-child(1), :nth-child(3) {
+        .tjs-wrapper {
+            &:after {
+                display: none!important;
+            }
+        }
+    }
+
+    &.white-boxes {
+        .tjs-box-price {
+            background: #FFFFFF 0% 0% no-repeat padding-box;
+            box-shadow: 0px 1px 2px #00000029;
+            border: 1px solid #DDDDDD;
+            border-radius: 20px;
+
+            .tjs-wrapper {
+                background-color: $white;
+            }
+
+            h3, p, ul, li, .end-price, .regular-price {
+                color: $font-main-color!important;
             }
         }
     }
@@ -108,6 +139,7 @@
                 .end-price {
                     color: $white;
                     font-size: rem(46px);
+                    text-wrap: nowrap;
 
                     .currency {
                         color: $primary;
@@ -145,6 +177,20 @@
         margin-left: rem(10px);
 
         .tjs-box-price {
+
+            &__content {
+                &--header {
+                    &-prices {
+                        .end-price {
+                            font-size: rem(28px);
+                        }
+
+                        .regular-price {
+                            font-size: rem(18px);
+                        }
+                    }
+                }
+            }
         }
     }
 }
